[package]
name = "capture-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
capture = { path = "../capture" }
envconfig = { workspace = true }
opentelemetry = { version = "0.21.0", features = ["trace"]}
opentelemetry-otlp = "0.14.0"
opentelemetry_sdk = { version = "0.21.0", features = ["trace", "rt-tokio"] }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
anyhow = { workspace = true, features = [] }
assert-json-diff =  { workspace = true }
futures = "0.3.29"
once_cell = "1.18.0"
rand = { workspace = true }
rdkafka = { workspace = true }
reqwest = "0.11.22"
serde_json = { workspace = true }