[package]
name = "capture-server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
capture = { path = "../capture" }
envconfig = { workspace = true }
opentelemetry = { version = "0.22.0", features = ["trace"]}
opentelemetry-otlp = "0.15.0"
opentelemetry_sdk = { version = "0.22.1", features = ["trace", "rt-tokio"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
anyhow = { workspace = true, features = [] }
assert-json-diff =  { workspace = true }
futures = "0.3.29"
once_cell = "1.18.0"
rand = { workspace = true }
rdkafka = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
