[package]
name = "capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
axum-client-ip = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
governor = { workspace = true }
tower_governor = { workspace = true }
time = { workspace = true }
tower-http = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
flate2 = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
serde_urlencoded = { workspace = true }
rand = { workspace = true }
rdkafka = { workspace = true }

[dev-dependencies]
assert-json-diff = "2.0.2"
axum-test-helper = "0.2.0"
mockall = "0.11.2"
