[package]
name = "capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.15" } # TODO: Bring up to date with the workspace.
axum-client-ip = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
governor = { workspace = true }
tower_governor = { workspace = true }
time = { workspace = true }
tower-http = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
flate2 = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
serde_urlencoded = { workspace = true }
rand = { workspace = true }
rdkafka = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
thiserror = { workspace = true }
redis = { version = "0.23.3", features = [
    "tokio-comp",
    "cluster",
    "cluster-async",
] }
envconfig = { workspace = true }
dashmap = "5.5.3"

[dev-dependencies]
assert-json-diff = { workspace = true }
axum-test-helper = "0.2.0"
mockall = "0.11.2"
redis-test = "0.2.3"
