[package]
name = "capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
axum-client-ip = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
governor = { workspace = true }
time = { workspace = true }
tower-http = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
flate2 = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
serde_urlencoded = { workspace = true }
rand = { workspace = true }
rdkafka = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
thiserror = { workspace = true }
redis = { version = "0.23.3", features = [
    "tokio-comp",
    "cluster",
    "cluster-async",
] }
envconfig = { workspace = true }

[dev-dependencies]
assert-json-diff = { workspace = true }
axum-test-helper = { git = "https://github.com/orphan-rs/axum-test-helper.git" } # TODO: remove, directly use reqwest like capture-server tests
