[package]
name = "funnels"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
itertools = "0.14.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
ordered-float = "5.1.0"

[dev-dependencies]
rstest = "0.26.1"

[profile.release]
lto = true
