[package]
name = "hook-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4" }
serde = { version = "1.0" }
serde_derive = { version = "1.0" }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid", "json", "chrono" ] }
thiserror = { version = "1.0" }

[dev-dependencies]
tokio = { version = "1.34", features = ["macros"] } # We need a runtime for async tests
