[package]
name = "hook-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12" }
chrono = { workspace = true }
envconfig = { workspace = true }
futures = "0.3"
hook-common = { path = "../hook-common" }
http = { version = "0.2" }
reqwest = { version = "0.11" }
serde = { workspace = true }
serde_derive = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { version = "2.2" }
