[package]
name = "hook-producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
axum = { version="0.7.1", features=["http2"] }
eyre = "0.6.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
