[package]
name = "hook-producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="0.7.1", features=["http2"] }
tokio = { workspace = true }
eyre = {workspace = true }
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
envconfig = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
