[package]
name = "hook-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
envconfig = { workspace = true }
futures = "0.3"
hook-common = { path = "../hook-common" }
http = { version = "0.2" }
metrics = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
url = { version = "2.2" }
